<resources>
    <string name="app_name">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="what_s_your_craving">What\'s your craving?</string>
    //<string name="or">-OR-</string>
    //<string name="todo">TODO</string>
   // <string name="todo1">TODO</string>
    <string name="recently_searched">-Recently Searched-</string>
    //<string name="todo2">TODO</string>
   // <string name="todo3">TODO</string>
   // <string name="todo4">TODO</string>
   // <string name="todo5">TODO</string>
    <string name="register">Register</string>
    <string name="string_register">Register</string>
</resources>
